# Web_server

./: .gitignore  CMakeLists.txt  main.cpp  run.sh  s1.html  sample2.txt  setup.sh  webserver
config/: config.json
disk/: cat.html  dog.html
disk/HTML/: cat.html
disk/TEXT/: message_1753968958.txt  sample.txt  sample1.txt
include/Cache/: LRUCache.hpp
include/Search/: FileIndexer.hpp  Sorting.hpp
include/Server/: RequestHandler.hpp  TCPServer.hpp
include/indexer/: FileIndexer.hpp
include/socket/: TCPWebServer.hpp
src/Cache/: LRUCache.cpp
src/Search/: CMakeLists.txt  FileIndexer.cpp  Sorting.cpp
src/Server/: RequestHandler.cpp  TCPServer.cpp
src/indexer/: CMakeLists.txt  FileIndexer.cpp
src/socket/: TCPWebServer.cpp
utils/: ConfigLoader.hpp
